fix button letter spacing

--- a/src/components/Download/index.scss
+++ b/src/components/Download/index.scss
@@ -58,12 +58,12 @@
             margin-top: 2rem;
             width: 25rem;
             height: 5rem;
+            letter-spacing: 0.2rem;
           }
 
           &__subtext {
             margin-top: 0.6rem;
             font-size: 1.2rem;
-            letter-spacing: 0.1rem;
           }
         }
       }
